--- a/package.json
+++ b/package.json
@@ -6,18 +6,27 @@
     "dev": "vite",
     "build": "vite build",
     "serve": "vite preview",
-    "check": "svelte-check --tsconfig ./tsconfig.json"
+    "check": "svelte-check --tsconfig ./tsconfig.json",
+    "server": "nodemon server.js"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.11",
     "@tsconfig/svelte": "^2.0.1",
+    "nodemon": "^2.0.15",
     "svelte": "^3.37.0",
     "svelte-check": "^2.1.0",
+    "svelte-loading-spinners": "^0.1.7",
     "svelte-preprocess": "^4.7.2",
     "svelte-routing": "^1.6.0",
     "tslib": "^2.2.0",
     "typescript": "^4.3.2",
     "vite": "^2.5.4"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@koa/cors": "^3.1.0",
+    "axios": "^0.25.0",
+    "koa": "^2.13.4",
+    "koa-json": "^2.0.2",
+    "koa-router": "^10.1.1"
+  }
 }
